# OTUS_Homework

./: .flake8  .gitignore  README.md  httpd.py  pyproject.toml  pytest.ini
.github/workflows/: otus_homeworks.yml
01_log_analyzer/tests/: test_analyzer.py
03_oop_api/: api.py
05_low_level_server/: README.md  pyproject.toml
api_tests_04/: test.py  tteesstt.py
log_analyzer_01/: log_analyzer.py
log_analyzer_01/tests/: test_analyzer.py
oop_api_03/: README.md  api.py  test.py  test_api.py
oop_api_tests_04/: README.md  scoring.py  store.py
oop_api_tests_04/tests/: utils.py
oop_api_tests_04/tests/integration/: test_integration.py
oop_api_tests_04/tests/unit/fields/: test_arguments_field.py  test_birthday_field.py  test_char_field.py  test_client_ids_field.py  test_date_field.py  test_email_field.py  test_gender_field.py  test_phone_field.py
oop_api_tests_04/tests/unit/requests/: test_interests_request.py  test_method_request.py  test_score_request.py
